<resources>
    <string name="app_name">TestTask</string>

    <!--  LOG IN FRAGMENT //////////////////////////////////////////////////////////////////////////////////////////  -->
    <string name="login_tv">Log in</string>
    <string name="email_et_hint">Email or username</string>
    <string name="password_et_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="forgot_password">Forgot?</string>

    <!--  MENU FLOW FRAGMENT //////////////////////////////////////////////////////////////////////////////////////////  -->
    <string name="profile_title">Profile</string>
    <string name="my_repos_title">My Repositories</string>
    <string name="all_users_title">All Users</string>


    <!--  MY REPOSITORIES FRAGMENT //////////////////////////////////////////////////////////////////////////////////////////  -->
    <string name="repo_name">Repository title: %1$s</string>
    <string name="repo_main_language">Main Language: %1$s</string>


    <!--  ALL USERS FRAGMENT //////////////////////////////////////////////////////////////////////////////////////////  -->
    <string name="search_users">Search</string>


    <!--  PROFILE FRAGMENT //////////////////////////////////////////////////////////////////////////////////////////  -->
    <string name="log_out_button">Log out</string>
    <string name="settings_item">Settings</string>


    <!--  SETTINGS FRAGMENT //////////////////////////////////////////////////////////////////////////////////////////  -->
    <string name="light_mode_radio">Light mode</string>
    <string name="dark_mode_radio">Dark mode</string>
    <string name="system_mode_radio">System default</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>