<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature_settings.SettingsFragment">


    <RadioGroup
        android:id="@+id/theme_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/light_mode_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_mode_radio"/>

        <RadioButton
            android:id="@+id/dark_mode_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode_radio"/>

        <RadioButton
            android:id="@+id/system_mode_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_mode_radio"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>